--- a/ghost-blog/templates/ghost-service.yaml
+++ b/ghost-blog/templates/ghost-service.yaml
@@ -2,11 +2,16 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ghost
+  namespace: ghost-blog
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "nlb" # NLB for AWS
+    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
+    service.beta.kubernetes.io/aws-load-balancer-eip-allocations: "eipalloc-064fdbde37051bd01"
 spec:
+  type: LoadBalancer # Ensure LoadBalancer type is set
   selector:
     app: ghost
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 2368
-  type: ClusterIP
+      targetPort: 2368 # Ghost runs on 2368 inside the container
