--- a/ghost-blog/templates/ghost-pv.yaml
+++ b/ghost-blog/templates/ghost-pv.yaml
@@ -8,6 +8,6 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: "gp2"  # Move this to the correct position
+  storageClassName: "standard"  # Move this to the correct position
   hostPath:
     path: "/data/ghost"
