--- a/ghost-blog/templates/mysql-pvc.yaml
+++ b/ghost-blog/templates/mysql-pvc.yaml
@@ -8,4 +8,4 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: "gp2"  # Correct indentation
+  storageClassName: "standard"  # Correct indentation
