--- a/ghost-blog/templates/mysql-pv.yaml
+++ b/ghost-blog/templates/mysql-pv.yaml
@@ -8,6 +8,6 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: "standard"  # Moved inside `spec`
+  storageClassName: gp3-csi  # Updated storage class
   hostPath:
     path: "/data/mysql"
