--- a/ghost-blog/templates/ghost-service.yaml
+++ b/ghost-blog/templates/ghost-service.yaml
@@ -4,12 +4,14 @@ metadata:
   name: ghost
   namespace: ghost-blog
   annotations:
-    service.beta.kubernetes.io/aws-load-balancer-type: "classic"  # Use Classic Load Balancer (ELB)
+    service.beta.kubernetes.io/aws-load-balancer-type: "nlb" # NLB for AWS
+    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
+    service.beta.kubernetes.io/aws-load-balancer-eip-allocations: "eipalloc-091bcf21fbc4b7c21"
 spec:
-  type: LoadBalancer  # This ensures AWS creates an ELB
+  type: LoadBalancer # Ensure LoadBalancer type is set
   selector:
     app: ghost
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 2368  # Ghost runs on port 2368 inside the container
+      targetPort: 2368 # Ghost runs on 2368 inside the container
