--- a/ghost-blog/templates/ghost-pvc.yaml
+++ b/ghost-blog/templates/ghost-pvc.yaml
@@ -8,4 +8,4 @@ spec:
   resources:
     requests:
       storage: 20Gi
-  storageClassName: gp3-csi  # Updated storage class
+  storageClassName: standard  # Updated storage class
