--- a/ghost-blog/templates/ghost-service.yaml
+++ b/ghost-blog/templates/ghost-service.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-type: "nlb" # NLB for AWS
     service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
-    service.beta.kubernetes.io/aws-load-balancer-eip-allocations: ""
+    service.beta.kubernetes.io/aws-load-balancer-eip-allocations: "eipalloc-091bcf21fbc4b7c21"
 spec:
   type: LoadBalancer # Ensure LoadBalancer type is set
   selector:
